--- a/src/assets/scss/Home/gallery.scss
+++ b/src/assets/scss/Home/gallery.scss
@@ -28,15 +28,16 @@
                     overflow: hidden;
 
                 }
-                img{
+                .initial_img{
                     object-fit: cover;
                     vertical-align: middle;
                     transition: all 0.3s ease;
+                    &:hover{
+                        transform: scale(1.1);
+                    }
                     
                 }
-                &:hover img{
-                    transform: scale(1.1);
-                }
+                
             }
         }
     }
