--- a/src/assets/scss/Home/index.scss
+++ b/src/assets/scss/Home/index.scss
@@ -19,6 +19,7 @@ html{
     font-size:20px;
     max-width: 1200px;
     -webkit-text-size-adjust:none;
+    
 }
 
 .home{
@@ -26,7 +27,7 @@ html{
     background: #FDF2D8;
     width: 100%;
     height: 100%;
-    
+    white-space: pre-wrap;
 }
 
 .home_picture{
