--- a/src/assets/scss/Home/news.scss
+++ b/src/assets/scss/Home/news.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     flex-direction: column;
     padding: 100px;
+    padding-top: 50px;
     box-sizing: border-box;
     margin-bottom: 30px;
     background-color: $brown;
@@ -14,8 +15,9 @@
         color: $white;
     }
     p{
-        font-size: 2.2rem;
+        font-size: 1.8vw;
         margin-top: 20px;
+        text-align: center;
         color: $white;
     }
 }
@@ -27,7 +29,8 @@
             font-size: 2rem;
         }
         p{
-            font-size: 2rem;
+            font-size: 1.4rem;
+            max-width: 100%;
         }
     }
 }
