--- a/src/assets/scss/Home/time.scss
+++ b/src/assets/scss/Home/time.scss
@@ -24,7 +24,7 @@
     justify-content: center;
     margin-top: 100px;
   }
-  .store-subname {
+  .store-subName {
     font-weight: bolder;
     font-size: 1rem;
     display: flex;
