--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -41,7 +41,7 @@
         .comment-content {
           grid-area: 2/1/2/7;
         }
-        .headicon {
+        .headIcon {
           grid-area: 3/1/3/1;
           .icon {
             font-size: 2rem;
@@ -97,7 +97,7 @@
       .comment-content {
         font-size: 0.8rem;
       }
-      .headicon .icon {
+      .headIcon .icon {
         font-size: 1rem;
       }
       .name {
