--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   margin-top: 60px;
 
-  .cardwrapper {
+  .cardWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,7 +119,7 @@
   #merchandise {
     overflow-x: hidden;
     overflow-y: hidden;
-    .cardwrapper {
+    .cardWrapper {
       display: block;
       .card {
         width: 100px;
