--- a/src/assets/scss/Home/comment.scss
+++ b/src/assets/scss/Home/comment.scss
@@ -31,12 +31,8 @@
           box-shadow: 0px 18px 68px rgba(0, 0, 0, 0.2);
           transform: translateY(-5px);
         }
-        .stars {
-          grid-area: 1/1/1/5;
-          .icon {
-            font-size: 2rem;
-            color: $yellow;
-          }
+        .vue-star-rating{
+          transform: scale(2.5) translateY(-5px) translateX(6px)
         }
         .comment-content {
           grid-area: 2/1/2/7;
@@ -53,10 +49,6 @@
           color: $orange;
           font-weight: bold;
           font-size: large;
-        }
-        .record-time {
-          grid-area: 1/5/1/7;
-          font-size: small;
         }
       }
 
@@ -109,7 +101,8 @@
     border-style: solid;
     border-width: 2px;
     .nameLabel{
-      margin: 0 20px;
+      margin: 0px 20px;
+      margin-top: 10px;
       font-size: 20px;
       display: block;
     }
@@ -118,17 +111,10 @@
       min-height:30px;
       margin:0 20px;
       margin-bottom: 10px;
+      display: inline-block;
     }
-    .star{
-      width:30px;
-      min-height: 30px;
-    }
-    .icon {
-      position: relative;
-      top:10px;
-      font-size: 2rem;
-      margin-left: 10px;
-      color: $yellow;
+    .vue-star-rating{
+      display: inline-block;
     }
     .commentLabel{
       margin: 0 20px;
